fix css splash text alignment

--- a/customizations/engage/static/brands/engage/less/style.less
+++ b/customizations/engage/static/brands/engage/less/style.less
@@ -18,7 +18,6 @@
 
   h1.description {
     color: @color-secondary;
-    position:absolute;
     font-weight: 100;
     width: 350px;
     font-size: 38px;
